# openvibeboard

./: .editorconfig  .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  README.md  README.zh-CN.md  index.html  project.yml
.github/workflows/: ci.yml  release-artifact.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: index.md
.trellis/tasks/07-04-swift-menubar-app/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-08-docs-i18n/: design.md  implement.md  prd.md  (+1 more)
OpenVibeBoard/: Info.plist  MenuBarView.swift  OpenVibeBoardApp.swift
OpenVibeBoard/Actions/: ActionDispatcher.swift
OpenVibeBoard/Key/: KeyInjector.swift
OpenVibeBoard/LaunchAtLogin/: LaunchAtLogin.swift
OpenVibeBoard/Models/: Config.swift
OpenVibeBoard/Permissions/: Accessibility.swift
OpenVibeBoard/Serial/: SerialMonitor.swift
OpenVibeBoard/Settings/: AboutView.swift  DeviceSettingsView.swift  KeyMappingEditorView.swift  KeyMappingsView.swift  KeyRecorderView.swift  SettingsView.swift
OpenVibeBoardTests/: ActionDispatcherTests.swift  ConfigTests.swift  KeyInjectorTests.swift  SerialMonitorTests.swift
VibeBoard/: Info.plist  MenuBarView.swift  VibeBoard.entitlements  VibeBoardApp.swift
VibeBoard/Models/: Config.swift
VibeBoard/Serial/: SerialMonitor.swift
archive/python-v0.1/: README.md  config.json  pyproject.toml  vibe_control.py
scripts/: package-release.sh
(+26 files in other folders)
